--- a/CourseAPP/www/index.html
+++ b/CourseAPP/www/index.html
@@ -11,7 +11,8 @@
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
-
+    <!-- firebase library -->
+    <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
